[gd_scene load_steps=5 format=3 uid="uid://cea444222pnom"]

[ext_resource type="Script" uid="uid://dg18uwam6bbwj" path="res://scripts/readable.gd" id="1_er85t"]
[ext_resource type="Texture2D" uid="uid://dy5sf1ifwtqb8" path="res://icon.svg" id="2_b6nvk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b6nvk"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hvutx"]
radius = 40.0

[node name="readable" type="Node2D"]
script = ExtResource("1_er85t")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 2.38419e-07)
scale = Vector2(0.1875, 0.0625)
texture = ExtResource("2_b6nvk")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_b6nvk")

[node name="range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource("CircleShape2D_hvutx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -100.0
offset_right = 190.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.258824)

[node name="description" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -40.5
offset_right = 135.0
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "test txt something a description of whatever this object isfj poasi fj;ow asdf asdlkf asdf dlfk sdlkfj sdlfkj  ;lskdfj lksdf lkdf "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
